# codeforces-bot

./: README.md  setup.cfg
codeforces_bot/: __main__.py  codeforces.py  util.py  yandex.py
