[metadata]
name = codeforces_bot
version = 0.0.0
author = user202729
description = "Script to scrape submissions on Codeforces, resubmit on Yandex (opencup) or something else, then report answer back to Codeforces."
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)

[options]
zip_safe = True
install_requires =
	selenium==3.141.0
packages = codeforces_bot/

[options.entry_points]
console_scripts =
	codeforces_bot = codeforces_bot.__main__:main
